cmake_minimum_required(VERSION 3.13)
if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build." FORCE)
  set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
endif()

project(heco_test)

enable_testing()
find_package(GTest CONFIG REQUIRED)

set(target_name test_heco_1_map_array)
add_executable(${target_name} "${target_name}.cpp")
target_compile_features(${target_name} PRIVATE cxx_std_17)
target_include_directories(${target_name} PRIVATE ${PROJECT_SOURCE_DIR}/..)
find_package(Boost REQUIRED)
target_include_directories(${target_name} PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries(${target_name} PRIVATE ${Boost_LIBRARIES})
target_link_libraries(${target_name} PRIVATE GTest::gtest GTest::gtest_main GTest::gmock GTest::gmock_main)
add_test(${target_name} ${target_name})

set(target_name test_heco_1_map_stable)
add_executable(${target_name} "${target_name}.cpp")
target_compile_features(${target_name} PRIVATE cxx_std_17)
target_include_directories(${target_name} PRIVATE ${PROJECT_SOURCE_DIR}/..)
target_link_libraries(${target_name} PRIVATE GTest::gtest GTest::gtest_main GTest::gmock GTest::gmock_main)
add_test(${target_name} ${target_name})

set(target_name test_heco_1_sparseset_stable)
add_executable(${target_name} "${target_name}.cpp")
target_compile_features(${target_name} PRIVATE cxx_std_17)
target_include_directories(${target_name} PRIVATE ${PROJECT_SOURCE_DIR}/..)
target_link_libraries(${target_name} PRIVATE GTest::gtest GTest::gtest_main GTest::gmock GTest::gmock_main)
add_test(${target_name} ${target_name})

set(target_name test_heco_n_map_stable)
add_executable(${target_name} "${target_name}.cpp")
target_compile_features(${target_name} PRIVATE cxx_std_17)
target_include_directories(${target_name} PRIVATE ${PROJECT_SOURCE_DIR}/..)
target_link_libraries(${target_name} PRIVATE GTest::gtest GTest::gtest_main GTest::gmock GTest::gmock_main)
add_test(${target_name} ${target_name})
